--- a/css/main.scss
+++ b/css/main.scss
@@ -15,8 +15,9 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$background-color: #fff8e1;
+//$brand-color:      #2a7ae2;
+$brand-color:      #03a9f4;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
