--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ $spacing-unit:     30px;
 $text-color:       #111;
 $background-color: #fff8e1;
 //$brand-color:      #2a7ae2;
-$brand-color:      #03a9f4;
+$brand-color:      #558b2f;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
