MIGRATION: Changed site theme to something more pleasant

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,18 +2,19 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <h2 class="footer-heading small-site-title">{{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
-      <!--
       <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        <ul class="contact-list footer-content">
+          <li>Powered By <a href="http://github.com/hemangsk/Gravity">Gravity</a></li>
+          <li>Made with <i class="fa fa-heart"></i> on <a href="http://jekyllrb.com"><span style="color:black">{ { Jekyll } }</a></span></li>
+
+
         </ul>
       </div>
-      -->
-      <div class="footer-col footer-col-1">
+
+      <div class="footer-col footer-col-2 footer-content">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -29,7 +30,7 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
+      <div class="footer-col footer-col-3 site-description">
         <p>{{ site.description }}</p>
       </div>
     </div>
