uf-ml-reading-group: initial commit
TODO: URLs to past meeting pdfs, etc

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,5 @@
   {% include analytics.html %}
   <script src="/js/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/js/bower_components/js/js.min.js"></script>
-
+  <script src="/js/list.js"></script>
 </head>
