Typo in ml-meetings.html

--- a/_includes/ml-meetings.html
+++ b/_includes/ml-meetings.html
@@ -22,7 +22,7 @@
 						</a>
 					{% endfor %}
 				{% else %}
-					<a href="{{ post.paperurls }}">{{ post.paper }}</a>
+					<a href="{{ post.paperurls }}">{{ post.papers }}</a>
 				{% endif %}
 			</td>
 				
