--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,15 +9,17 @@
   <div class="trigger site-navigation">
    
     {% for sitePage in site.pages %}
-    {% if sitePage.title %}
+      {% if sitePage.front %}
+      {% if sitePage.title %}
 
-    <a class="page-link" href="{{sitePage.url | prepend: site.baseurl }}">{{sitePage.title}}</a>
-    
-    {% if forloop.index < 6 %}
-        <span class="exclamationMark">/</span>
-    {% endif %}
+      <a class="page-link" href="{{sitePage.url | prepend: site.baseurl }}">{{sitePage.title}}</a>
+      
+      {% if forloop.index < 7 %}
+          <span class="exclamationMark">/</span>
+      {% endif %}
 
-    {% endif %}
+      {% endif %}
+      {% endif %}
     {% endfor %}
   </div>
 </div>
