--- a/css/style.scss
+++ b/css/style.scss
@@ -986,3 +986,158 @@ img {
     font-weight: bold;
     font-style: normal;
 }
+
+/*************************************************
+ *  Hugo Academic: an academic theme for Hugo.
+ *  Designed by @GeorgeCushen.
+ *  https://github.com/gcushen/hugo-academic
+ **************************************************/
+ .container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+.row:after,
+.row:before {
+  content: " ";
+  display: table;
+}
+
+table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+  font-size: 0.93rem;
+}
+
+table > thead > tr > th,
+table > tbody > tr > th,
+table > tfoot > tr > th,
+table > thead > tr > td,
+table > tbody > tr > td,
+table > tfoot > tr > td {
+  padding: 8px;
+  line-height: 1.43;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
+
+table > thead > tr > th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #ddd;
+}
+
+table > caption + thead > tr:first-child > th,
+table > colgroup + thead > tr:first-child > th,
+table > thead:first-child > tr:first-child > th,
+table > caption + thead > tr:first-child > td,
+table > colgroup + thead > tr:first-child > td,
+table > thead:first-child > tr:first-child > td {
+  border-top: 0;
+}
+
+table > tbody + tbody {
+  border-top: 2px solid #ddd;
+}
+
+table table {
+  background-color: #fff;
+}
+
+/* Table Striped */
+table > tbody > tr:nth-child(odd) > td,
+table > tbody > tr:nth-child(odd) > th {
+  background-color: #f9f9f9;
+}
+
+/* Table Hover */
+table > tbody > tr:hover > td,
+table > tbody > tr:hover > th {
+  background-color: #e5e5e5;
+}
+
+.ml-3, .mx-3 {
+  margin-left: 1rem !important;
+}
+
+.mb-0, .my-0 {
+  margin-bottom: 0 !important;
+}
+.mt-0, .my-0 {
+  margin-top: 0 !important;
+}
+
+.col-xl, .col-xl-auto, .col-xl-12, .col-xl-11, .col-xl-10, .col-xl-9, .col-xl-8, .col-xl-7, .col-xl-6, .col-xl-5, .col-xl-4, .col-xl-3, .col-xl-2, .col-xl-1, .col-lg, .col-lg-auto, .col-lg-12, .col-lg-11, .col-lg-10, .col-lg-9, .col-lg-8, .col-lg-7, .col-lg-6, .col-lg-5, .col-lg-4, .col-lg-3, .col-lg-2, .col-lg-1, .col-md, .col-md-auto, .col-md-12, .col-md-11, .col-md-10, .col-md-9, .col-md-8, .col-md-7, .col-md-6, .col-md-5, .col-md-4, .col-md-3, .col-md-2, .col-md-1, .col-sm, .col-sm-auto, .col-sm-12, .col-sm-11, .col-sm-10, .col-sm-9, .col-sm-8, .col-sm-7, .col-sm-6, .col-sm-5, .col-sm-4, .col-sm-3, .col-sm-2, .col-sm-1, .col, .col-auto, .col-12, .col-11, .col-10, .col-9, .col-8, .col-7, .col-6, .col-5, .col-4, .col-3, .col-2, .col-1 {
+  position: relative;
+  width: 100%;
+}
+
+.media.stream-item {
+  margin-bottom: 2rem;
+}
+
+.media {
+  display: flex;
+  align-items: flex-start;
+}
+
+.media.stream-item, .article-style, .card-simple, .article-style {
+  margin-top: 2px;
+
+.stream-meta {
+    margin-top: 12px;
+}
+
+.stream-meta.article-metadata {
+    margin-bottom: 5px;
+}}
+
+.btn {
+  padding: .5rem;
+  font-size: 2rem;
+  line-height: .5;
+  border-radius: .3rem;
+}
+
+.btn.btn-sm, .btn-group-sm>.btn {
+  padding: 5px .4rem 5px .4rem;
+  font-size: 1.2rem;
+  border-radius: .2rem;
+}
+
+.btn-links, .btn {
+  padding: 5px .5rem 5px .5rem;
+  line-height: 1;
+}
+
+.mb-1, .my-1 {
+  margin-bottom: .25rem !important;
+}
+
+.mr-1, .mx-1 {
+  margin-right: .25rem !important;
+}
+
+.mt-1, .my-1 {
+  margin-top: .25rem !important;
+}
+
+.btn-sm, .btn-group-sm>.btn {
+  padding: .25rem .5rem;
+  font-size: .875rem;
+  line-height: 1.5;
+  border-radius: .2rem;
+}
+
+
+.btn-outline-primary {
+  color: #dbb16f;
+  border-color: #dbb16f;
+}
