--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -60,7 +60,7 @@
 
       
       <div class="article-style">
-        <em>NeurIPS 2020 Workshop on Object Reps. for Learning and Reasoning <strong>(Spotlight)</strong></em> <br>  We identify limitations of applying certain object-centric world models to stochastic environments and propose a state space model and training objective that achieves better stochastic future prediction.
+        <em>NeurIPS 2020 Workshop on Object Reps. for Learning and Reasoning <strong>(Spotlight)</strong></em> <br>  We propose a state space model and training objective that achieves better stochastic future prediction for object-centric world models.
       </div>
       
 
@@ -97,7 +97,7 @@
 
     <div class="img">        
       <a href="https://pemami4911.github.io/blog/2020/12/08/symmetric-and-object-centric-world-models.html" >
-        <img src="/img/orlr/orlr_main.png" alt="Symmetric and Object-Centric World Model for Stochastic Environments">
+        <img src="/img/Home/orlr_main.png" alt="Symmetric and Object-Centric World Model for Stochastic Environments">
       </a>
       
     </div>
@@ -183,7 +183,7 @@
 
     <div class="img">        
       <a href="https://arxiv.org/abs/1802.06897" >
-        <img src="/img/Home/mot_survey.png" alt="Machine Learning Methods for Data Association in Multi-Object Tracking">
+        <img src="/img/Home/MOT_survey.png" alt="Machine Learning Methods for Data Association in Multi-Object Tracking">
       </a>
       
     </div>
