updates to resumes

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -28,16 +28,20 @@
       
       <div>
         <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2106.03630" target="_blank" rel="noopener">
-          Abstract
+          Arxiv
         </a>
         
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/pdf/2106.03630.pdf" target="_blank" rel="noopener">
-          PDF
+        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="http://proceedings.mlr.press/v139/emami21a.html" target="_blank" rel="noopener">
+          PMLR
         </a>
 
         <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
                 href="https://github.com/pemami4911/EfficientMORL">
           Github
+        </a>
+
+        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="pdfs/slides-emorl.pdf" target="_blank" rel="noopener">
+          Slides
         </a>
 
       </div>     
