Link to YouTube

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -40,8 +40,8 @@
           Github
         </a>
 
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="pdfs/slides-emorl.pdf" target="_blank" rel="noopener">
-          Slides
+        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://youtu.be/4SDXQxBu_D8" target="_blank" rel="noopener">
+          YouTube
         </a>
 
       </div>     
