Adding T-ITS paper

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -5,6 +5,52 @@
 
   <div class="col-12 col-lg-8">
 
+    <div class="media stream-item">
+      <div class="media-body">
+  
+        <h3 class="article-title mb-0 mt-0">
+          <a href="https://ieeexplore.ieee.org/abstract/document/9557791/">Long-range Multi-Object Tracking at Traffic Intersections on Low-Power Devices</a>
+        </h3>
+  
+        
+        <div class="article-style">
+          <em>IEEE Transactions on Intelligent Transportation Systems, Oct. 2021</em> <br> A CNN architecture for joint object detection and Re-ID on low-power edge devices and a multi-sensor tracking algorithm for radar.
+        </div>
+        
+  
+        <div class="stream-meta article-metadata"> 
+          <div>
+            <span ><strong>Patrick Emami</strong></span>, <span >Lily Elefteriadou</span>, <span >Sanjay Ranka</span>
+          </div>
+          
+        </div>
+  
+        
+        <div>
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://ieeexplore.ieee.org/abstract/document/9557791/" target="_blank" rel="noopener">
+            IEEE
+          </a>
+          
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="pdfs/mobiledr.pdf" target="_blank" rel="noopener">
+            PDF
+          </a>
+  
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
+                  href="https://github.com/pemami4911/MobileDR">
+            Github
+          </a>
+  
+        </div>     
+      </div>
+  
+      <div class="img">        
+        <a href="https://arxiv.org/abs/2106.03630" >
+          <img src="/img/Home/overview_400x400.png" alt="Efficient Iterative Amortized Inference for Learning Symmetric and Disentangled Multi-Object Representations">
+        </a>
+        
+      </div>
+    </div>
+
   <div class="media stream-item">
     <div class="media-body">
 
