--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -9,6 +9,49 @@
       <div class="media-body">
   
         <h3 class="article-title mb-0 mt-0">
+          <a href="https://arxiv.org/abs/2111.08755">Learning Scene Dynamics from Point Cloud Sequences</a>
+        </h3>
+  
+        
+        <div class="article-style">
+          <em>International Journal of Computer Vision Special Issue on 3D Computer Vision, 2021</em> <br> We introduce the sequential scene flow estimation problem and provide a novel baseline architecture and benchmark for evaluation.
+        </div>
+        
+  
+        <div class="stream-meta article-metadata"> 
+          <div>
+            <span>Pan He</span>, <span ><strong>Patrick Emami</strong></span>, <span >Sanjay Ranka</span>, <span>Anand Rangarajan</span>
+          </div>
+          
+        </div>
+  
+        
+        <div>
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2111.08755" target="_blank" rel="noopener">
+            Arxiv
+          </a>
+  
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
+                  href="https://github.com/BestSonny/SPCM">
+            Github (coming soon)
+          </a>
+  
+        </div>
+      </div>
+      
+      <div class="img">        
+        <a href="https://arxiv.org/abs/2111.08755" >
+          <img src="/img/Home/ssfe.png" alt="Learning Scene Dynamics from Point Cloud Sequences">
+        </a>
+        
+      </div>
+
+      </div>
+
+    <div class="media stream-item">
+      <div class="media-body">
+  
+        <h3 class="article-title mb-0 mt-0">
           <a href="https://ieeexplore.ieee.org/abstract/document/9557791/">Long-range Multi-Object Tracking at Traffic Intersections on Low-Power Devices</a>
         </h3>
   
@@ -37,7 +80,7 @@
   
           <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
                   href="https://github.com/pemami4911/MobileDR">
-            Github
+            Github (coming soon)
           </a>
   
         </div>     
