--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -14,7 +14,7 @@
   
         
         <div class="article-style">
-          <em>International Journal of Computer Vision Special Issue on 3D Computer Vision, 2021</em> <br> We introduce the sequential scene flow estimation problem and provide a novel baseline architecture and benchmark for evaluation.
+          <em>IJCV Special Issue on 3D Computer Vision, 2021</em> <br> We introduce the sequential scene flow estimation problem and provide a novel baseline architecture and benchmark for evaluation.
         </div>
         
   
