--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -9,6 +9,59 @@
       <div class="media-body">
   
         <h3 class="article-title mb-0 mt-0">
+          <a href="/blog/2023/01/05/ppde.html">Plug & Play Directed Evolution of Proteins with Gradient-based Discrete MCMC</a>
+        </h3>
+  
+        
+        <div class="article-style">
+          <em>Under Review. Presented at NeurIPS’22 Workshop on Machine Learning in Structural Biology.</em> <br> A fast MCMC sampler for discovering variants by mixing and matching unsupervised evolutionary sequence models with supervised models that map sequence to protein function.
+        </div>
+        
+  
+        <div class="stream-meta article-metadata"> 
+          <div>
+            <span ><strong>Patrick Emami</strong></span>, <span >Aidan Perreault</span>, <span >Jeff Law</span>, <span >Dave Biagioni</span>, <span >Peter C. St. John</span>
+          </div>
+          
+        </div>
+  
+        
+        <div>
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2212.09925" target="_blank" rel="noopener">
+            Arxiv
+          </a>
+  
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
+                  href="https://github.com/pemami4911/ppde">
+            Github
+          </a>
+
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://colab.research.google.com/drive/1s3heukQga1ShfxrAMRxNtZFfSwu_D_m7?usp=sharing" target="_blank" rel="noopener">
+            colab demo
+          </a>
+  
+        </div>
+
+        <div>
+          
+  
+  
+        </div>
+      </div>
+      
+      <div class="img">        
+        <a href="/blog/2023/01/05/ppde.html" >
+          <img src="/img/PPDE/Proteins_qual_single.png" alt="PABP_YEAST protein">
+        </a>
+        
+      </div>
+
+      </div>
+
+    <div class="media stream-item">
+      <div class="media-body">
+  
+        <h3 class="article-title mb-0 mt-0">
           <a href="https://arxiv.org/abs/2111.08755">Learning Scene Dynamics from Point Cloud Sequences</a>
         </h3>
   
@@ -196,92 +249,7 @@
     </div>
   </div>
 
-  <div class="media stream-item">
-    <div class="media-body">
-
-      <h3 class="article-title mb-0 mt-0">
-        <a href="https://arxiv.org/abs/2005.13466">On the Detection of Disinformation Campaign Activity with Network Analysis</a>
-      </h3>
-
-      
-      <div class="article-style">
-        <em>CCSW 2020: The ACM Cloud Computing Security Workshop</em> <br> Characterizing the machine learning problem of detecting disinformation-like coordinated activity on Twitter.
-      </div>
-      
-
-      <div class="stream-meta article-metadata"> 
-        <div>
-          <span ><strong>Patrick Emami*</strong></span>, <span ><strong>Luis Vargas*</strong></span>, <span >Patrick Traynor</span> (* Denotes equal contribution)
-        </div>
-      </div>
-
-      
-      <div>
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2005.13466" target="_blank" rel="noopener">
-          Abstract
-        </a>
-        
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/pdf/2005.13466.pdf" target="_blank" rel="noopener">
-          PDF
-        </a>          
-
-      </div>     
-    </div>
-
-    <div class="img">        
-      <a href="https://arxiv.org/abs/2005.13466" >
-        <img src="/img/Home/Disinfo.png" alt="On the Detection of Disinformation Campaign Activity with Network Analysis">
-      </a>
-      
-    </div>
-  </div>
-
-
-  <div class="media stream-item">
-    <div class="media-body">
-
-      <h3 class="article-title mb-0 mt-0">
-        <a href="https://arxiv.org/abs/1802.06897">Machine Learning Methods for Data Association in Multi-Object Tracking</a>
-      </h3>
-
-      
-      <div class="article-style">
-        <em>ACM Computing Surveys, 53, 4, Article 69 (August 2020)</em> <br> A survey on algorithmic and recent deep-learning-based approaches to the data association problem in multi-object tracking.
-      </div>
-      
-
-      <div class="stream-meta article-metadata"> 
-        <div>
-          <span ><strong>Patrick Emami</strong></span>, <span>Panos M. Pardalos</span>, <span>Lily Elefteriadou</span>, <span>Sanjay Ranka</span>
-        </div>
-        
-      </div>
-
-      
-      <div>
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/1802.06897" target="_blank" rel="noopener">
-          Abstract
-        </a>
-        
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/pdf/1802.06897.pdf" target="_blank" rel="noopener">
-          PDF
-        </a>          
-
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://dl.acm.org/doi/10.1145/3394659" target="_blank" rel="noopener">
-          ACM Digital Library
-        </a>
-
-      </div>     
-    </div>
-
-    <div class="img">        
-      <a href="https://arxiv.org/abs/1802.06897" >
-        <img src="/img/Home/MOT_survey.png" alt="Machine Learning Methods for Data Association in Multi-Object Tracking">
-      </a>
-      
-    </div>
-  </div>
-
+  
 </div>
 </div>
 </div>
