home and blog updates

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -14,7 +14,7 @@
   
         
         <div class="article-style">
-          <em>Under Review. Presented at NeurIPS’22 Workshop on Machine Learning in Structural Biology.</em> <br> A fast MCMC sampler for discovering variants by mixing and matching unsupervised evolutionary sequence models with supervised models that map sequence to protein function.
+          <em>Machine Learning: Science & Technology, 2023<br> Also presented at NeurIPS’22 Workshop on Machine Learning in Structural Biology</em> <br> A fast MCMC sampler for discovering variants by mixing and matching unsupervised evolutionary sequence models with supervised models that map sequence to protein function.
         </div>
         
   
@@ -27,6 +27,10 @@
   
         
         <div>
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1088/2632-2153/accacd" target="_blank" rel="noopener">
+            DOI
+          </a>
+
           <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2212.09925" target="_blank" rel="noopener">
             Arxiv
           </a>
@@ -37,7 +41,7 @@
           </a>
 
           <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://colab.research.google.com/drive/1s3heukQga1ShfxrAMRxNtZFfSwu_D_m7?usp=sharing" target="_blank" rel="noopener">
-            colab demo
+            Colab demo
           </a>
   
         </div>
@@ -67,7 +71,7 @@
   
         
         <div class="article-style">
-          <em>IJCV Special Issue on 3D Computer Vision, 2021</em> <br> We introduce the sequential scene flow estimation problem and provide a novel baseline architecture and benchmark for evaluation.
+          <em>IJCV, 2022</em> <br> We introduce the sequential scene flow estimation problem and provide a novel baseline architecture and benchmark for evaluation.
         </div>
         
   
@@ -80,6 +84,11 @@
   
         
         <div>
+          
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/s11263-021-01551-y" target="_blank" rel="noopener">
+            DOI
+          </a>
+
           <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2111.08755" target="_blank" rel="noopener">
             Arxiv
           </a>
@@ -110,7 +119,7 @@
   
         
         <div class="article-style">
-          <em>IEEE Transactions on Intelligent Transportation Systems, Oct. 2021</em> <br> A CNN architecture for joint object detection and Re-ID on low-power edge devices and a multi-sensor tracking algorithm for radar.
+          <em>IEEE Transactions on Intelligent Transportation Systems, 2021</em> <br> A CNN architecture for joint object detection and Re-ID on low-power edge devices and a multi-sensor tracking algorithm for radar.
         </div>
         
   
@@ -156,7 +165,7 @@
 
       
       <div class="article-style">
-        <em>ICML 2021</em> <br> An efficient slot-based hierachical VAE for learning unordered, symmetric, and disentangled scene representations.
+        <em>ICML, 2021</em> <br> An efficient slot-based hierachical VAE for learning unordered, symmetric, and disentangled scene representations.
       </div>
       
 
