--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -6,6 +6,56 @@
   <div class="col-12 col-lg-8">
 
     <div class="media stream-item">
+        <div class="media-body">
+    
+          <h3 class="article-title mb-0 mt-0">
+            <a href="https://arxiv.org/abs/2307.00142">BuildingsBench: A Large-Scale Dataset of 900K Buildings and Benchmark for Short-Term Load Forecasting</a>
+          </h3>
+    
+          
+          <div class="article-style">
+            <em>arXiv preprint</em> <br>Platform for studying large-scale pretraining + zero-shot generalization/finetuning of building load forecasting models.
+          </div>
+          
+    
+          <div class="stream-meta article-metadata"> 
+            <div>
+              <span ><strong>Patrick Emami</strong></span>, <span >Abhijeet Sahu</span>, <span >Peter Graf</span>
+            </div>
+            
+          </div>
+    
+          
+          <div> 
+            <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2307.00142" target="_blank" rel="noopener">
+              Arxiv
+            </a>
+    
+            <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
+                    href="https://github.com/NREL/BuildingsBench/">
+              Github
+            </a>
+  
+            <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://data.openei.org/submissions/5859" target="_blank" rel="noopener">
+              Datasets
+            </a>
+    
+          </div>
+  
+          <div>
+          </div>
+        </div>
+        
+        <div class="img">        
+          <a href="https://github.com/NREL/BuildingsBench/" >
+            <img src="/img/commercial_forecast.gif" alt="BuildingsBench CONUS GIF">
+          </a>
+          
+        </div>
+  
+        </div>
+
+    <div class="media stream-item">
       <div class="media-body">
   
         <h3 class="article-title mb-0 mt-0">
@@ -205,59 +255,6 @@
       
     </div>
   </div>
-
-  <div class="media stream-item">
-    <div class="media-body">
-
-      <h3 class="article-title mb-0 mt-0">
-        <a href="https://pemami4911.github.io/blog/2020/12/08/symmetric-and-object-centric-world-models.html">A Symmetric and Object-Centric World Model for Stochastic Environments</a>
-      </h3>
-
-      
-      <div class="article-style">
-        <em>NeurIPS 2020 Workshop on Object Reps. for Learning and Reasoning <strong>(Spotlight)</strong></em> <br>  We propose a state space model and training objective that achieves better stochastic future prediction for object-centric world models.
-      </div>
-      
-
-      <div class="stream-meta article-metadata"> 
-        <div>
-          <span ><strong>Patrick Emami</strong></span>, <span >Pan He</span>, <span >Anand Rangarajan</span>, <span >Sanjay Ranka</span>
-        </div>
-        
-      </div>
-
-      
-      <div>
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://pemami4911.github.io/blog/2020/12/08/symmetric-and-object-centric-world-models.html" target="_blank" rel="noopener">
-          Webpage
-        </a>
-        
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/orlrworkshop/orlrworkshop.github.io/blob/master/pdf/ORLR_3.pdf" target="_blank" rel="noopener">
-          PDF
-        </a>
-
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
-                href="https://github.com/pemami4911/symmetric-and-object-centric-world-models">
-          Github
-        </a>
-
-        <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="pdfs/Workshop_poster_HD.pdf" target="_blank" rel="noopener">
-          Poster
-        </a>
-
-          
-
-      </div>     
-    </div>
-
-    <div class="img">        
-      <a href="https://pemami4911.github.io/blog/2020/12/08/symmetric-and-object-centric-world-models.html" >
-        <img src="/img/Home/orlr_main.png" alt="Symmetric and Object-Centric World Model for Stochastic Environments">
-      </a>
-      
-    </div>
-  </div>
-
   
 </div>
 </div>
