--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -9,6 +9,49 @@
         <div class="media-body">
     
           <h3 class="article-title mb-0 mt-0">
+            <a href="https://arxiv.org/abs/2307.08794">Non-Stationary Policy Learning for Multi-Timescale Multi-Agent Reinforcement Learning</a>
+          </h3>
+    
+          
+          <div class="article-style">
+            <em>IEEE CDC'23 (To appear)</em> <br>Framework for learning non-stationary policies in multi-timescale MARL by leveraging periodicity.
+          </div>
+          
+    
+          <div class="stream-meta article-metadata"> 
+            <div>
+              <span ><strong>Patrick Emami</strong></span>, <span >Xiangyu Zhang</span>, <span>David Biagioni</span>, <span>Ahmed S. Zamzam</span>
+            </div>
+            
+          </div>
+    
+          
+          <div> 
+            <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2307.08794" target="_blank" rel="noopener">
+              Arxiv
+            </a>
+        
+          </div>
+  
+          <div>
+          </div>
+        </div>
+        
+        <div class="img">        
+          <a href="https://arxiv.org/abs/2307.08794" >
+            <img src="/img/MTMARL.png" alt="MT-MARL">
+          </a>
+          
+        </div>
+  
+        </div>
+
+
+
+    <div class="media stream-item">
+        <div class="media-body">
+    
+          <h3 class="article-title mb-0 mt-0">
             <a href="https://arxiv.org/abs/2307.00142">BuildingsBench: A Large-Scale Dataset of 900K Buildings and Benchmark for Short-Term Load Forecasting</a>
           </h3>
     
@@ -87,11 +130,12 @@
   
           <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
                   href="https://github.com/pemami4911/ppde">
-            Github
+            Code
           </a>
 
-          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://colab.research.google.com/drive/1s3heukQga1ShfxrAMRxNtZFfSwu_D_m7?usp=sharing" target="_blank" rel="noopener">
-            Colab demo
+          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" 
+                  href="https://github.com/NREL/EvoProtGrad" target="_blank" rel="noopener">
+            EvoProtGrad (Github)
           </a>
   
         </div>
@@ -112,98 +156,6 @@
 
       </div>
 
-    <div class="media stream-item">
-      <div class="media-body">
-  
-        <h3 class="article-title mb-0 mt-0">
-          <a href="https://arxiv.org/abs/2111.08755">Learning Scene Dynamics from Point Cloud Sequences</a>
-        </h3>
-  
-        
-        <div class="article-style">
-          <em>IJCV, 2022</em> <br> We introduce the sequential scene flow estimation problem and provide a novel baseline architecture and benchmark for evaluation.
-        </div>
-        
-  
-        <div class="stream-meta article-metadata"> 
-          <div>
-            <span>Pan He</span>, <span ><strong>Patrick Emami</strong></span>, <span >Sanjay Ranka</span>, <span>Anand Rangarajan</span>
-          </div>
-          
-        </div>
-  
-        
-        <div>
-          
-          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/s11263-021-01551-y" target="_blank" rel="noopener">
-            DOI
-          </a>
-
-          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2111.08755" target="_blank" rel="noopener">
-            Arxiv
-          </a>
-  
-          <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
-                  href="https://github.com/BestSonny/SPCM">
-            Github (coming soon)
-          </a>
-  
-        </div>
-      </div>
-      
-      <div class="img">        
-        <a href="https://arxiv.org/abs/2111.08755" >
-          <img src="/img/Home/ssfe.png" alt="Learning Scene Dynamics from Point Cloud Sequences">
-        </a>
-        
-      </div>
-
-      </div>
-
-    <div class="media stream-item">
-      <div class="media-body">
-  
-        <h3 class="article-title mb-0 mt-0">
-          <a href="https://ieeexplore.ieee.org/abstract/document/9557791/">Long-range Multi-Object Tracking at Traffic Intersections on Low-Power Devices</a>
-        </h3>
-  
-        
-        <div class="article-style">
-          <em>IEEE Transactions on Intelligent Transportation Systems, 2021</em> <br> A CNN architecture for joint object detection and Re-ID on low-power edge devices and a multi-sensor tracking algorithm for radar.
-        </div>
-        
-  
-        <div class="stream-meta article-metadata"> 
-          <div>
-            <span ><strong>Patrick Emami</strong></span>, <span >Lily Elefteriadou</span>, <span >Sanjay Ranka</span>
-          </div>
-          
-        </div>
-  
-        
-        <div>
-          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://ieeexplore.ieee.org/abstract/document/9557791/" target="_blank" rel="noopener">
-            IEEE
-          </a>
-          
-          <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="pdfs/mobiledr.pdf" target="_blank" rel="noopener">
-            PDF
-          </a>
-  
-          <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
-                  href="https://github.com/pemami4911/MobileDR">
-            Github (coming soon)
-          </a>
-  
-        </div>     
-      </div>
-  
-      <div class="img">        
-        <a href="https://arxiv.org/abs/2106.03630" >
-          <img src="/img/Home/overview_400x400.png" alt="Efficient Iterative Amortized Inference for Learning Symmetric and Disentangled Multi-Object Representations">
-        </a>
-        
-      </div>
     </div>
 
   <div class="media stream-item">
@@ -249,7 +201,7 @@
     </div>
 
     <div class="img">        
-      <a href="https://arxiv.org/abs/2106.03630" >
+      <a href="http://proceedings.mlr.press/v139/emami21a.html" >
         <img src="/img/Home/EMORL-GM.png" alt="Efficient Iterative Amortized Inference for Learning Symmetric and Disentangled Multi-Object Representations">
       </a>
       
