--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -1,6 +1,46 @@
 <div class="container">      
     <div class="row">
         <div class="col-12 col-lg-8">
+            
+            <div class="media stream-item">
+                <div class="media-body">
+            
+                <h3 class="article-title mb-0 mt-0">
+                    <a href="https://arxiv.org/abs/2405.19653">SysCaps: Language Interfaces for Simulation Surrogates of Complex Systems</a>
+                </h3>
+            
+                
+                <div class="article-style">
+                    <em>arXiv preprint</em> <br>Augmenting surrogate models for complex systems with natural language interfaces.
+                </div>
+                
+            
+                <div class="stream-meta article-metadata"> 
+                    <div>
+                    <span ><strong>Patrick Emami</strong></span>, <span >Zhaonan Li</span>, <span >Saumya Sinha</span>, <span> Truc Nguyen</span>
+                    </div>
+                </div>
+            
+                
+                <div> 
+                    <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2405.19653" target="_blank" rel="noopener">
+                    Arxiv
+                    </a>
+            
+                </div>
+        
+                <div>
+                </div>
+                </div>
+                
+                <div class="img">        
+                <a href="https://arxiv.org/abs/2405.19653" >
+                    <img src="/img/SysCaps/syscaps.png" alt="Warehouse">
+                </a>
+                
+                </div>
+        
+            </div>
 
             <div class="media stream-item">
                 <div class="media-body">
@@ -9,7 +49,7 @@
                 </h3>
 
                 <div class="article-style">
-                    <em>IEEE CDC'23 (To appear)</em> <br>Framework for learning non-stationary policies in multi-timescale MARL by leveraging periodicity.
+                    <em>IEEE CDC'23</em> <br>Framework for learning non-stationary policies in multi-timescale MARL by leveraging periodicity.
                 </div>
                 
                 <div class="stream-meta article-metadata"> 
@@ -46,7 +86,7 @@
             
                 
                 <div class="article-style">
-                    <em>arXiv preprint</em> <br>Platform for studying large-scale pretraining + zero-shot generalization/finetuning of building load forecasting models.
+                    <em>NeurIPS D&B 2023</em> <br>Platform for studying large-scale pretraining + zero-shot generalization/finetuning of building load forecasting models.
                 </div>
                 
             
@@ -143,57 +183,6 @@
                 
             </div>
 
-            </div>
-
-
-            <div class="media stream-item">
-                <div class="media-body">
-
-                <h3 class="article-title mb-0 mt-0">
-                    <a href="https://arxiv.org/abs/2106.03630">Efficient Iterative Amortized Inference for Learning Symmetric and Disentangled Multi-Object Representations</a>
-                </h3>
-
-                
-                <div class="article-style">
-                    <em>ICML, 2021</em> <br> An efficient slot-based hierachical VAE for learning unordered, symmetric, and disentangled scene representations.
-                </div>
-                
-
-                <div class="stream-meta article-metadata"> 
-                    <div>
-                    <span ><strong>Patrick Emami</strong></span>, <span >Pan He</span>, <span >Sanjay Ranka</span>, <span >Anand Rangarajan</span>
-                    </div>
-                    
-                </div>
-
-                
-                <div>
-                    <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2106.03630" target="_blank" rel="noopener">
-                    Arxiv
-                    </a>
-                    
-                    <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="http://proceedings.mlr.press/v139/emami21a.html" target="_blank" rel="noopener">
-                    PMLR
-                    </a>
-
-                    <a class="btn btn-outline-primary my-1 mr-1 btn-sm"
-                            href="https://github.com/pemami4911/EfficientMORL">
-                    Github
-                    </a>
-
-                    <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://youtu.be/4SDXQxBu_D8" target="_blank" rel="noopener">
-                    YouTube
-                    </a>
-
-                </div>     
-                </div>
-
-                <div class="img">        
-                <a href="http://proceedings.mlr.press/v139/emami21a.html" >
-                    <img src="/img/Home/EMORL-GM.png" alt="Efficient Iterative Amortized Inference for Learning Symmetric and Disentangled Multi-Object Representations">
-                </a>
-                
-                </div>
             </div>
     
         </div>
