--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -11,7 +11,7 @@
             
                 
                 <div class="article-style">
-                    <em>arXiv preprint</em> <br>Augmenting surrogate models for complex systems with natural language interfaces.
+                    <em>NeurIPS'24 Workshop on Foundation Models for Science</em> <br>Augmenting surrogate models for complex systems with natural language interfaces.
                 </div>
                 
             
